--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -11,7 +11,63 @@ $icon-font-path: '../../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
 *::after {
   box-sizing: border-box;
 }
-
+ul{
+  list-style: none;
+  margin:0;
+  padding: 0;
+}
 img {
   max-width: 100%;
+}
+.float-left{
+  float:left;
+}
+.float-right{
+  float: right;
+}
+.container{
+  width: 100%;
+  background: rgba(245, 245, 241, 1);
+  height: 1000px;
+  padding: 0;
+}
+.header{
+  background: white;
+  height: 80px;
+  border-bottom: 1px solid rgba(225, 225, 225, 1);
+}
+.categories{
+  background: white;
+  height: 43px;
+  border-bottom: 1px solid rgba(225, 225, 225, 1);
+  box-shadow: 0 1px 1px 0 rgba(0,0,0, .1);
+}
+.inside{
+  max-width: 985px;
+  display: block;
+  margin: 0 auto;
+}
+.header-info{
+  margin-top: 25px;
+}
+#search-top{
+  margin: 0 0 0 20px;
+  line-height: 25px;
+  border-radius: 3px 0 0 3px;
+}
+#search-button{
+  border-radius: 0 3px 3px 0;
+  background: rgba(9, 168, 196, 1);
+  color: white;
+  font-weight: bold;
+  padding: 6px 15px;
+  margin:0;
+}
+.top-nav{
+  display: inline-block;
+  padding: 30px 10px 0 10px;
+  color: rgba(102, 102, 102, 1);
+  &:not(:last-of-type){
+    border-right: 1px solid rgba(238, 238, 238, 1);
+  }
 }
