categories added dynamically into sidebar with sidebar-template handlebar

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -71,3 +71,50 @@ img {
     border-right: 1px solid rgba(238, 238, 238, 1);
   }
 }
+.categories{
+  text-align: center;
+  padding-top: 10px;
+}
+.cat-item{
+  display: inline-block;
+  margin-right: 10px;
+  line-height: 29px;
+  a{
+    text-decoration: none;
+    color: rgba(136, 136, 139, 1);
+  }
+  &:hover{
+    border-bottom: 3px solid rgba(248, 102, 0, 1);
+    a{
+      color: rgba(35, 35, 35, 1);
+    }
+  }
+}
+.page-info{
+  margin-top: 30px;
+}
+.sidebar{
+  width: 25%;
+}
+.sidebar-outside{
+  display: block;
+  margin-bottom: 10px;
+}
+.sidebar-box{
+  padding: 10px;
+  background: white;
+  border: 1px solid rgba(223, 223, 223, 1);
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+.sidebar-cat-link{
+  margin-left: 10px;
+}
+.page-content{
+  width: 70%;
+  height: 500px;
+  margin-left: 5%;
+}
+.footer{
+  clear: both;
+}
