--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -306,6 +306,110 @@ select option {
   height: 500px;
   margin-left: 5%;
 }
+#top-cats{
+  border-bottom: 1px solid $border-lt-gray;
+}
+.img-box-outer{
+  border-radius: 5px;
+  height: 200px;
+  overflow: hidden;
+  display: inline-block;
+  position: relative;
+  text-align: center;
+  margin-bottom: 1.4%;
+}
+.img-bg-holder{
+  width: 120%;
+  height: 200px;
+  img{
+    width: 150%;
+    display: block;
+    margin: 0 auto;
+  }
+}
+.img-box-info{
+  display: inline-block;
+  padding: 12px;
+  position: relative;
+  top: 60%;
+  z-index: 100;
+  background: rgba(255, 255, 255, 1);
+  border-radius: 5px;
+  h3{
+    margin: 0;
+  }
+}
+.half{
+  width: 49%;
+  margin-right: 1.4%;
+}
+.third{
+  width: 32%;
+  margin-right: 1.4%;
+}
+.last{
+  margin-right: 0;
+}
+.top-cats-title{
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+.sort-by-dd-options{
+  display: none;
+}
+.results-top-info{
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+.results-cat-path{
+  display: inline-block;
+  width: 70%;
+}
+.results-sort-by{
+  display: inline-block;
+  width: 29%;
+  text-align: right;
+}
+.result{
+  width: 32%;
+  margin-right: 1.4%;
+  display: inline-block;
+  border-radius: 5px;
+  background: white;
+  border: 1px solid $border-lt-gray;
+  margin-bottom: 1.4%;
+  img{
+    width: 100%;
+  }
+  &:nth-of-type(3n+0){
+    margin-right: 0;
+  }
+}
+.result-img-holder{
+  display: block;
+  width: 100%;
+  height: 150px;
+  overflow: hidden;
+  border-radius: 5px 5px 0 0;
+}
+.result-meta{
+  padding: 8px;
+}
+.result-seller, .result-price{
+  display: inline-block;
+  overflow: hidden;
+}
+.result-seller{
+  width: 75%;
+  a{
+  color: $border-lt-gray;
+  }
+}
+.result-price{
+  width: 24.1%;
+  text-align: right;
+  color: rgba(124, 191, 85, 1);
+}
 .footer{
   clear: both;
 }
